--- a/public/edit.html
+++ b/public/edit.html
@@ -5,7 +5,6 @@
   <title>تعديل الفيديوهات</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
   <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
-
   <style>
     body {
       background-color: #f4f6fb;
@@ -58,11 +57,13 @@
       height: 200px;
       border-radius: 6px;
     }
-    /* الكلاس الجديد لروابط SharePoint */
+    /* الكلاس الخاص بمعاينة SharePoint */
     .sharepoint-frame {
       width: 100%;
       height: 200px;
       border-radius: 6px;
+      display: block;
+      object-fit: cover;
     }
     .popout-button {
       background-color: #0d6efd;
@@ -83,6 +84,7 @@
       background: white;
     }
   </style>
+  
 </head>
 <body>
   <div class="container text-center">
