--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,14 @@
       height: 200px;
       border-radius: 6px;
     }
+    /* كلاس خاص بـ SharePoint */
+    .sharepoint-frame {
+      width: 100%;
+      height: 200px;
+      border-radius: 6px;
+      display: block;
+      object-fit: cover;
+    }
     .popout-button {
       background-color: #0d6efd;
       color: white;
@@ -176,6 +184,16 @@ function renderVideos() {
     } else if (link.includes('drive.google.com/file/d/')) {
       const match = link.match(/\/file\/d\/(.*?)(\/|$)/);
       media = match ? `<iframe src="https://drive.google.com/file/d/${match[1]}/preview" allowfullscreen></iframe>` : `<video controls src="${link}"></video>`;
+    } else if (link.includes("sharepoint.com/") && link.includes("/embed.aspx")) {
+      media = `<iframe class="sharepoint-frame" src="${link}" allowfullscreen></iframe>`;
+    } else if (link.includes("sharepoint.com/") && link.includes("/stream.aspx")) {
+      const uniqueIdMatch = link.match(/UniqueId=([a-zA-Z0-9\-]+)/);
+      if (uniqueIdMatch) {
+        const embedUrl = `https://ymkh-my.sharepoint.com/personal/laith_obaidat_iu_edu_jo/_layouts/15/embed.aspx?UniqueId=${uniqueIdMatch[1]}&embed=%7B%22ust%22%3Atrue%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create`;
+        media = `<iframe class="sharepoint-frame" src="${embedUrl}" allowfullscreen></iframe>`;
+      } else {
+        media = `<video controls src="${link}"></video>`;
+      }
     } else {
       media = `<video controls src="${link}"></video>`;
     }
@@ -222,8 +240,8 @@ function requestDashboardAccess() {
 
   modalEl.addEventListener('shown.bs.modal', () => {
     const input = document.getElementById('dashboardPassword');
-    input.value = ''; // مسح المحتوى
-    input.focus();    // تركيز المؤشر
+    input.value = '';
+    input.focus();
   });
 
   passwordModal.show();
@@ -254,7 +272,6 @@ function requestDashboardAccess() {
   };
 }
 
-// فتح وإغلاق المودال بالضغط على F8
 document.addEventListener('keydown', e => {
   if (e.key === 'F8') {
     const modalEl = document.getElementById('passwordModal');
