--- a/public/edit.html
+++ b/public/edit.html
@@ -57,7 +57,6 @@
       height: 200px;
       border-radius: 6px;
     }
-    /* الكلاس الخاص بمعاينة SharePoint */
     .sharepoint-frame {
       width: 100%;
       height: 200px;
@@ -84,7 +83,6 @@
       background: white;
     }
   </style>
-  
 </head>
 <body>
   <div class="container text-center">
@@ -229,6 +227,8 @@ function renderVideos() {
 
     const link = video.link || video.url || '';
     let media = '';
+    let popoutLink = link;
+
     if (link.includes('youtube.com') || link.includes('youtu.be')) {
       media = `<iframe src="https://www.youtube.com/embed/${extractYouTubeID(link)}" allowfullscreen></iframe>`;
     } else if (link.includes('drive.google.com/file/d/')) {
@@ -240,11 +240,16 @@ function renderVideos() {
       }
     } else if (link.includes("sharepoint.com/") && link.includes("/embed.aspx")) {
       media = `<iframe class="sharepoint-frame" src="${link}" allowfullscreen></iframe>`;
+      const uniqueIdMatch = link.match(/UniqueId=([a-zA-Z0-9\-]+)/);
+      if (uniqueIdMatch) {
+        popoutLink = `https://ymkh-my.sharepoint.com/personal/laith_obaidat_iu_edu_jo/_layouts/15/stream.aspx?UniqueId=${uniqueIdMatch[1]}`;
+      }
     } else if (link.includes("sharepoint.com/") && link.includes("/stream.aspx")) {
       const uniqueIdMatch = link.match(/UniqueId=([a-zA-Z0-9\-]+)/);
       if (uniqueIdMatch) {
         const embedUrl = `https://ymkh-my.sharepoint.com/personal/laith_obaidat_iu_edu_jo/_layouts/15/embed.aspx?UniqueId=${uniqueIdMatch[1]}&embed=%7B%22ust%22%3Atrue%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create`;
         media = `<iframe class="sharepoint-frame" src="${embedUrl}" allowfullscreen></iframe>`;
+        popoutLink = link;
       } else {
         media = `<video controls src="${link}"></video>`;
       }
@@ -252,7 +257,7 @@ function renderVideos() {
       media = `<video controls src="${link}"></video>`;
     }
 
-    const popout = `<button class="popout-button" onclick="window.open('${link}', '_blank', 'width=800,height=600')">عرض الفيديو</button>`;
+    const popout = `<button class="popout-button" onclick="window.open('${popoutLink}', '_blank', 'width=800,height=600')">عرض الفيديو</button>`;
     const actions = `
       <div class="action-buttons">
         <button class="btn btn-warning btn-sm" onclick="openEditModal('${video._id}')">تعديل</button>
