--- a/public/index.html
+++ b/public/index.html
@@ -3,27 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <title>الرئيسية</title>
+  <link rel="icon" type="image/png" href="https://app.iu.edu.jo/cf/images/iu.png">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
   <style>
     body {
-      background-color: #f4f6fb;
+      background: linear-gradient(to right, #e0eafc, #cfdef3);
       padding: 20px;
       font-family: 'Segoe UI', sans-serif;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
     }
     .header-controls {
       display: flex;
       justify-content: center;
       align-items: center;
       position: relative;
+      gap: 10px;
     }
     .header-controls h3 {
       flex: 1;
       text-align: center;
       margin: 0;
-    }
-    .header-controls button {
-      position: absolute;
-      left: 0;
     }
     .video-card {
       background: white;
@@ -87,12 +89,19 @@
       cursor: pointer;
       margin-top: 6px;
     }
+    footer {
+      text-align: center;
+      margin-top: 20px;
+      font-weight: bold;
+      color: #333;
+    }
   </style>
 </head>
 <body>
   <div class="container text-center">
     <div class="header-controls mb-4">
       <button class="btn btn-warning" onclick="requestDashboardAccess()">🔐 لوحة التحكم</button>
+      <a href="https://video-dashboard-backend.onrender.com/links.html" class="btn btn-info">🔗 روابط مهمة</a>
       <h3>اختر القسم لعرض الفيديوهات</h3>
     </div>
     <select id="departmentSelect" class="form-select mb-3">
@@ -101,6 +110,10 @@
     <input id="searchInput" class="form-control mb-4" type="text" placeholder="ابحث بعنوان أو وصف الفيديو..." disabled>
     <div id="videoContainer" class="video-grid"></div>
   </div>
+
+  <footer>
+    برمجة وتطوير: ليث عبيدات
+  </footer>
 
   <!-- نافذة عرض الوصف -->
   <div class="modal fade" id="descModal" tabindex="-1">
@@ -296,7 +309,6 @@ document.getElementById('departmentSelect').addEventListener('change', () => {
 document.getElementById('searchInput').addEventListener('input', renderVideos);
 
 fetchVideos();
-</script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</script><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
