--- a/public/index.html
+++ b/public/index.html
@@ -91,19 +91,30 @@
     }
     footer {
       text-align: center;
-      margin-top: 20px;
+      margin-top: auto;
+      padding: 10px 0;
+    }
+    .dev-signature {
       font-weight: bold;
-      color: #333;
+      font-size: 1.2rem;
+      opacity: 0;
+      animation: fadeIn 2s ease forwards, glowColors 3s ease-in-out infinite alternate;
+    }
+    @keyframes fadeIn {
+      to { opacity: 1; }
+    }
+    @keyframes glowColors {
+      0%   { text-shadow: 0 0 5px #ff0000, 0 0 15px #ff0000; color: #ff0000; }
+      25%  { text-shadow: 0 0 5px #00ff00, 0 0 15px #00ff00; color: #00aa00; }
+      50%  { text-shadow: 0 0 5px #0000ff, 0 0 15px #0000ff; color: #0000ff; }
+      75%  { text-shadow: 0 0 5px #ff00ff, 0 0 15px #ff00ff; color: #aa00aa; }
+      100% { text-shadow: 0 0 5px #ffaa00, 0 0 15px #ffaa00; color: #aa5500; }
     }
   </style>
 </head>
 <body>
   <div class="container text-center">
-    <div class="header-controls mb-4">
-      <button class="btn btn-warning" onclick="requestDashboardAccess()">🔐 لوحة التحكم</button>
-      <a href="https://video-dashboard-backend.onrender.com/links.html" class="btn btn-info">🔗 روابط مهمة</a>
-      <h3>اختر القسم لعرض الفيديوهات</h3>
-    </div>
+    <h3>اختر القسم لعرض الفيديوهات</h3>
     <select id="departmentSelect" class="form-select mb-3">
       <option value="">-- اختر القسم --</option>
     </select>
@@ -111,8 +122,15 @@
     <div id="videoContainer" class="video-grid"></div>
   </div>
 
+  <div class="container text-center mb-3">
+    <div class="d-flex justify-content-center gap-2">
+      <button class="btn btn-warning" onclick="requestDashboardAccess()">🔐 لوحة التحكم</button>
+      <a href="https://video-dashboard-backend.onrender.com/links.html" class="btn btn-info">🔗 روابط مهمة</a>
+    </div>
+  </div>
+
   <footer>
-    برمجة وتطوير: ليث عبيدات
+    <div class="dev-signature">برمجة وتطوير: ليث عبيدات</div>
   </footer>
 
   <!-- نافذة عرض الوصف -->
@@ -309,6 +327,7 @@ document.getElementById('departmentSelect').addEventListener('change', () => {
 document.getElementById('searchInput').addEventListener('input', renderVideos);
 
 fetchVideos();
-</script><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
