--- a/public/index.html
+++ b/public/index.html
@@ -94,24 +94,30 @@
       margin-top: 20px;
       font-weight: bold;
       color: #333;
-      animation: glow 1.5s infinite alternate;
+      font-size: 1.1rem;
+      text-shadow: 1px 1px 2px #aaa;
+      animation: fadeIn 2s ease-in-out infinite alternate;
     }
-    @keyframes glow {
-      from { text-shadow: 0 0 5px #999; }
-      to { text-shadow: 0 0 15px #666; }
+    @keyframes fadeIn {
+      from { opacity: 0.6; }
+      to { opacity: 1; }
     }
   </style>
 </head>
 <body>
   <div class="container text-center">
-    <br>
-    <img src="https://app.iu.edu.jo/cf/images/iu.png" alt="IU Logo" width="120">
-    <br><br>
-    <h3>اختر القسم لعرض الفيديوهات</h3>
-    <div class="header-controls mb-4 mt-3">
+    <div class="header-controls mb-4">
       <button class="btn btn-warning" onclick="requestDashboardAccess()">🔐 لوحة التحكم</button>
       <a href="https://video-dashboard-backend.onrender.com/links.html" class="btn btn-info">🔗 روابط مهمة</a>
     </div>
+
+    <!-- الأيقونة فوق العنوان -->
+    <div class="mb-2">
+      <img src="https://app.iu.edu.jo/cf/images/iu.png" alt="IU Icon" style="width: 120px; height: auto;">
+    </div>
+
+    <h3>اختر القسم لعرض الفيديوهات</h3>
+
     <select id="departmentSelect" class="form-select mb-3">
       <option value="">-- اختر القسم --</option>
     </select>
