--- a/public/links.html
+++ b/public/links.html
@@ -3,45 +3,88 @@
 <head>
   <meta charset="UTF-8">
   <title>روابط</title>
+  <link rel="icon" type="image/png" href="https://app.iu.edu.jo/cf/images/iu.png">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
+  <style>
+    body {
+      background: linear-gradient(to right, #e0eafc, #cfdef3);
+      padding: 20px;
+      font-family: 'Segoe UI', sans-serif;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
+    footer {
+      text-align: center;
+      margin-top: auto;
+      font-weight: bold;
+      color: #333;
+      font-size: 1.1rem;
+      animation: glow 2s infinite alternate;
+    }
+    @keyframes glow {
+      from { text-shadow: 0 0 5px #0d6efd; }
+      to { text-shadow: 0 0 15px #0d6efd; }
+    }
+  </style>
 </head>
 <body>
   <div class="container mt-4">
     <h2 class="mb-4 text-center">إدارة الروابط</h2>
 
-    <!-- زر إضافة رابط -->
     <div class="text-center mb-3">
-      <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addLinkModal">➕ إضافة رابط جديد</button>
+      <button class="btn btn-primary" onclick="openPasswordModal('add')">➕ إضافة رابط جديد</button>
     </div>
 
-    <!-- جدول عرض الروابط -->
     <div class="table-responsive">
       <table class="table table-bordered table-hover text-center align-middle">
         <thead class="table-dark">
           <tr>
+            <th>#</th>
             <th>اسم الرابط</th>
             <th>وصف</th>
             <th>الرابط</th>
             <th>تاريخ الإضافة</th>
+            <th>إجراءات</th>
           </tr>
         </thead>
         <tbody id="linksTableBody">
-          <tr><td colspan="4">جارٍ التحميل...</td></tr>
+          <tr><td colspan="6">جارٍ التحميل...</td></tr>
         </tbody>
       </table>
     </div>
   </div>
 
-  <!-- نافذة إضافة رابط جديد -->
+  <!-- نافذة كلمة المرور -->
+  <div class="modal fade" id="passwordModal" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">🔐 أدخل كلمة المرور</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+        <div class="modal-body">
+          <input type="password" id="actionPassword" class="form-control" placeholder="Enter password" lang="en">
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">إلغاء</button>
+          <button type="button" class="btn btn-primary" id="confirmPasswordBtn">تأكيد</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- نافذة إضافة/تعديل رابط -->
   <div class="modal fade" id="addLinkModal" tabindex="-1">
     <div class="modal-dialog modal-fullscreen">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title">➕ إضافة رابط جديد</h5>
+          <h5 class="modal-title" id="modalTitle">➕ إضافة رابط جديد</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
         </div>
         <div class="modal-body">
           <form id="addLinkForm">
+            <input type="hidden" name="id" id="linkId">
             <div class="mb-3">
               <label class="form-label">اسم الرابط</label>
               <input type="text" class="form-control" name="name" required>
@@ -68,38 +111,102 @@
     </div>
   </div>
 
+  <footer>برمجة وتطوير: ليث عبيدات</footer>
+
 <script>
 const API_BASE = 'https://video-dashboard-backend.onrender.com';
+let pendingAction = null;
+let editId = null;
 
-// عرض الروابط في الجدول
+function openPasswordModal(action, id = null) {
+  pendingAction = action;
+  editId = id;
+  const modal = new bootstrap.Modal(document.getElementById('passwordModal'));
+  modal.show();
+  document.getElementById('actionPassword').focus();
+}
+
+document.getElementById('confirmPasswordBtn').addEventListener('click', async () => {
+  const password = document.getElementById('actionPassword').value.trim();
+  if (!password) return;
+
+  const res = await fetch(`${API_BASE}/api/verify-password`, {
+    method: 'POST',
+    headers: { 'Content-Type': 'application/json' },
+    body: JSON.stringify({ password })
+  });
+
+  if (res.ok) {
+    bootstrap.Modal.getInstance(document.getElementById('passwordModal')).hide();
+
+    if (pendingAction === 'add') {
+      document.getElementById('modalTitle').textContent = '➕ إضافة رابط جديد';
+      document.getElementById('addLinkForm').reset();
+      document.getElementById('linkId').value = '';
+      new bootstrap.Modal(document.getElementById('addLinkModal')).show();
+    } 
+    else if (pendingAction === 'edit') {
+      const link = linksData.find(l => l._id === editId);
+      if (link) {
+        document.getElementById('modalTitle').textContent = '✏️ تعديل رابط';
+        document.querySelector('[name="name"]').value = link.name;
+        document.querySelector('[name="description"]').value = link.description || '';
+        document.querySelector('[name="link"]').value = link.link;
+        document.querySelector('[name="linkText"]').value = link.linkText;
+        document.getElementById('linkId').value = link._id;
+        new bootstrap.Modal(document.getElementById('addLinkModal')).show();
+      }
+    }
+    else if (pendingAction === 'delete') {
+      if (confirm('❌ هل أنت متأكد من الحذف؟')) {
+        await fetch(`${API_BASE}/api/links/${editId}`, { method: 'DELETE' });
+        fetchLinks();
+      }
+    }
+
+    pendingAction = null;
+    editId = null;
+  } else {
+    alert('❌ كلمة المرور غير صحيحة');
+  }
+});
+
+let linksData = [];
+
 async function fetchLinks() {
   const res = await fetch(`${API_BASE}/api/links`);
-  const links = await res.json();
+  linksData = await res.json();
   const tbody = document.getElementById('linksTableBody');
   tbody.innerHTML = '';
-  if (!links.length) {
-    tbody.innerHTML = '<tr><td colspan="4">لا توجد روابط</td></tr>';
+  if (!linksData.length) {
+    tbody.innerHTML = '<tr><td colspan="6">لا توجد روابط</td></tr>';
     return;
   }
-  links.forEach(link => {
+  linksData.forEach((link, index) => {
     const tr = document.createElement('tr');
     tr.innerHTML = `
+      <td>${index + 1}</td>
       <td>${link.name}</td>
       <td>${link.description || ''}</td>
       <td><a href="${link.link}" target="_blank">${link.linkText}</a></td>
       <td>${new Date(link.dateAdded).toLocaleString()}</td>
+      <td>
+        <button class="btn btn-sm btn-warning" onclick="openPasswordModal('edit','${link._id}')">✏️ تعديل</button>
+        <button class="btn btn-sm btn-danger" onclick="openPasswordModal('delete','${link._id}')">🗑️ حذف</button>
+      </td>
     `;
     tbody.appendChild(tr);
   });
 }
 
-// حفظ رابط جديد
 document.getElementById('saveLinkBtn').addEventListener('click', async () => {
   const form = document.getElementById('addLinkForm');
   const data = Object.fromEntries(new FormData(form).entries());
+  const method = data.id ? 'PUT' : 'POST';
+  const url = data.id ? `${API_BASE}/api/links/${data.id}` : `${API_BASE}/api/links`;
 
-  const res = await fetch(`${API_BASE}/api/links`, {
-    method: 'POST',
+  const res = await fetch(url, {
+    method,
     headers: { 'Content-Type': 'application/json' },
     body: JSON.stringify(data)
   });
@@ -109,7 +216,7 @@ document.getElementById('saveLinkBtn').addEventListener('click', async () => {
     bootstrap.Modal.getInstance(document.getElementById('addLinkModal')).hide();
     fetchLinks();
   } else {
-    alert('❌ فشل في إضافة الرابط');
+    alert('❌ فشل العملية');
   }
 });
 
