--- a/public/links.html
+++ b/public/links.html
@@ -106,6 +106,11 @@
               <label class="form-label">النص الظاهر للرابط</label>
               <input type="text" class="form-control" name="linkText" required>
             </div>
+            <!-- ✅ الخيار الجديد -->
+            <div class="mb-3 form-check">
+              <input type="checkbox" class="form-check-input" name="requiresPassword" id="requiresPassword">
+              <label class="form-check-label" for="requiresPassword">يتطلب كلمة مرور لفتح الرابط</label>
+            </div>
           </form>
         </div>
         <div class="modal-footer">
@@ -122,7 +127,6 @@
 const API_BASE = 'https://video-dashboard-backend.onrender.com';
 let pendingAction = null;
 let editId = null;
-let protectedLinks = []; // روابط تتطلب كلمة مرور
 
 function openPasswordModal(action, id = null) {
   pendingAction = action;
@@ -178,6 +182,7 @@ document.getElementById('confirmPasswordBtn').addEventListener('click', async ()
         document.querySelector('[name="description"]').value = link.description || '';
         document.querySelector('[name="link"]').value = link.link;
         document.querySelector('[name="linkText"]').value = link.linkText;
+        document.getElementById('requiresPassword').checked = link.requiresPassword || false;
         document.getElementById('linkId').value = link._id;
         new bootstrap.Modal(document.getElementById('addLinkModal')).show();
       }
@@ -237,6 +242,7 @@ async function fetchLinks() {
 document.getElementById('saveLinkBtn').addEventListener('click', async () => {
   const form = document.getElementById('addLinkForm');
   const data = Object.fromEntries(new FormData(form).entries());
+  data.requiresPassword = document.getElementById('requiresPassword').checked; // ✅ حفظ القيمة
   const method = data.id ? 'PUT' : 'POST';
   const url = data.id ? `${API_BASE}/api/links/${data.id}` : `${API_BASE}/api/links`;
 
