--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -62,6 +62,13 @@
           <a href="index.html">فهرس الأقسام</a>
         </div>
       </div>
+      <!-- ✅ القسم الجديد -->
+      <div class="col-md-4">
+        <div class="dashboard-card">
+          <div class="card-icon">🔗</div>
+          <a href="links.html">إدارة الروابط</a>
+        </div>
+      </div>
     </div>
   </div>
 </body>
