--- a/public/links.html
+++ b/public/links.html
@@ -244,7 +244,7 @@ async function fetchLinks() {
     const secureLink = `${API_BASE}/api/redirect/${link._id}`;
     const linkHtml = link.requiresPassword 
       ? `<a href="#" onclick="openPasswordModal('openLink','${link._id}')">${link.linkText}</a>` 
-      : `<a href="${secureLink}" target="_blank" rel="noopener noreferrer">${link.linkText}</a>`;
+      : `<a href="#" onclick="openInModal('${secureLink}')">${link.linkText}</a>`;
     const tr = document.createElement('tr');
     tr.innerHTML = `
       <td>${index + 1}</td>
