--- a/public/links.html
+++ b/public/links.html
@@ -218,7 +218,7 @@ document.getElementById('confirmPasswordBtn').addEventListener('click', async ()
     else if (pendingAction === 'openLink') {
       const link = linksData.find(l => l._id === editId);
       if (link) {
-        const secureLink = `${API_BASE}/api/redirect/${link._id}`;
+        const secureLink = `${API_BASE}/api/redirect/${encodeURIComponent(link._id || link.link)}`;
         openInModal(secureLink);
       }
     }
@@ -244,7 +244,7 @@ async function fetchLinks() {
   }
   linksData.forEach((link, index) => {
     const lockIcon = link.requiresPassword ? '🔒' : '';
-    const secureLink = `${API_BASE}/api/redirect/${link._id}`;
+    const secureLink = `${API_BASE}/api/redirect/${encodeURIComponent(link._id || link.link)}`;
     const linkHtml = link.requiresPassword 
       ? `<a href="#" onclick="openPasswordModal('openLink','${link._id}')">${link.linkText}</a>` 
       : `<a href="#" onclick="window.open('${secureLink}', '_blank')">${link.linkText}</a>`;
