--- a/public/index.html
+++ b/public/index.html
@@ -123,7 +123,7 @@
 
   <div class="bottom-buttons">
     <button class="btn btn-warning" onclick="requestDashboardAccess()">🔐 لوحة التحكم</button>
-    <a href="https://video-dashboard-backend.onrender.com/links.html" class="btn btn-info">🔗 روابط مهمة</a>
+    <a href="https://video-dashboard-backend.onrender.com/viewlinks.html" class="btn btn-info">🔗 روابط مهمة</a>
   </div>
 
   <footer>
