--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>الرئيسية</title>
-  <link rel="icon" type="image/png" href="https://app.iu.edu.jo/cf/images/iu.png">
+  <link rel="icon" type="image/png" href="https://drive.google.com/file/d/1xJEB7P2baB-GPA7soTML-miNxeKlIfsw/view?usp=drive_link">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
   <style>
     body {
@@ -111,7 +111,7 @@
 </head>
 <body>
   <div class="container text-center">
-    <img src="https://app.iu.edu.jo/cf/images/iu.png" alt="شعار" style="width:120px; display:block; margin:0 auto 10px auto;">
+    <img src="https://drive.google.com/file/d/1xJEB7P2baB-GPA7soTML-miNxeKlIfsw/view?usp=drive_link" alt="شعار" style="width:120px; display:block; margin:0 auto 10px auto;">
     <h3>اختر القسم لعرض الفيديوهات</h3>
 
     <select id="departmentSelect" class="form-select mb-3">
