--- a/public/index.html
+++ b/public/index.html
@@ -111,7 +111,7 @@
 </head>
 <body>
   <div class="container text-center">
-    <img src="https://www.dropbox.com/scl/fi/f283e4rvv5cf9x12a1cic/my-website-logo.png?rlkey=yia776im7klypy27af32m0scy&e=1&st=uf6gtlos&dl=1" alt="شعار" style="width:120px; display:block; margin:0 auto 10px auto;">
+    <img src="https://www.dropbox.com/scl/fi/oyzy2tgfu9ky706mxdo2r/my-website-logo2.png?rlkey=8dqbogpfme5xlttdnululptlo&e=1&st=7kv0fd0c&dl=1" alt="شعار" style="width:120px; display:block; margin:0 auto 10px auto;">
     <h3>اختر القسم لعرض الفيديوهات</h3>
 
     <select id="departmentSelect" class="form-select mb-3">
