--- a/public/links.html
+++ b/public/links.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>روابط</title>
-  <link rel="icon" type="image/png" href="https://app.iu.edu.jo/cf/images/iu.png">
+  <link rel="icon" type="image/png" href="https://www.dropbox.com/scl/fi/f283e4rvv5cf9x12a1cic/my-website-logo.png?rlkey=yia776im7klypy27af32m0scy&e=1&st=1a88ft05&dl=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
   <style>
     body {
@@ -35,7 +35,7 @@
 </head>
 <body>
   <div class="container mt-4 text-center">
-    <img src="https://app.iu.edu.jo/cf/images/iu.png" alt="Icon" class="page-icon">
+    <img src="https://www.dropbox.com/scl/fi/oyzy2tgfu9ky706mxdo2r/my-website-logo2.png?rlkey=8dqbogpfme5xlttdnululptlo&e=1&st=7kv0fd0c&dl=1" alt="Icon" class="page-icon">
     <h2 class="mb-4">إدارة الروابط</h2>
 
     <div class="text-center mb-3 d-flex justify-content-center gap-2">
